@@ -3,7 +3,8 @@ IMPROVEMENTS
 	- Update the in-flight Guard Menu to match the settings in the weapon manager in the SPH.
 	- Dynamically adjust (max) gun range based on the guns that are actually on a vessel.
 	- Add log and competition status messages about disabling a vessel due to EMP damage.
-	- Upgrade the numerical integrator for bullets and ballistic trajectory simulations to use the 2nd order symplectic leapfrog method (this vastly improves the accuracy and speed of the trajectory simulations).
+	- Upgrade the numerical integrator for bullets and ballistic trajectory simulations to use the 2nd order symplectic leapfrog method (this vastly improves the accuracy and speed of the trajectory simulations). Allows for ballistic aiming out to at least 50km.
+	- Include dead teams information in the results.
 
 v1.4.4.4
 FIXES
